--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Dr. Christoph Bauer
+title: Christoph's GitHub Pages
+author: Dr. Christoph Bauer
 email: christoph.bauer@vodafone.de
 description: >- # this means to ignore newlines until "baseurl:"
   These pages are about who I am and what I do, and from time to time I might publish
@@ -26,7 +27,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: arthurhobspice
-github_username:  arthurhobspice
+github_username: arthurhobspice
+linkedin_username: arthurhobspice
 
 # Build settings
 theme: minima
