--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Christoph's GitHub Pages
 author: Dr. Christoph Bauer
-email: christoph.bauer@vodafone.de
+email: arthurhobspice@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   These pages are about who I am and what I do, and from time to time I might publish
   some content about what I find interesting in IT, physics and other areas.
